api/swim_form/src/tests/derive/form/unknown_container_attr.stderr
error: Unknown container attribute
  --> src/tests/derive/form/unknown_container_attr.rs:20:12
   |
20 |     #[form(swim)]
   |            ^^^^
